--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          REALIZA TU COMPRA DESDE ESTA APLICACION De parte de FER :D 
         </div>
         <a class="botonTira" href="https://coppel.onelink.me/tkwG/iarCmE" data-nd1="Cintillo" data-nd2="" data-nd3="Clic cintillo" data-nd4="1" data-evento="clicGeneral" data-campaña="" data-texto="Compra en Coppel desde la App">
-        DESCÁRGALA AQUÍ
+        DESCÁRGALA AQUÍ - ATTE HUGO T_T
         </a>
 </div>
 <script>
